--- a/password-generator/style.css
+++ b/password-generator/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #3b3b98;
+  background-color: #000000;
   color: #fff;
   font-family: 'Muli', sans-serif;
   display: flex;
@@ -24,15 +24,23 @@ h2 {
 }
 
 .container {
-  background-color: #23235b;
-  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+  position: relative;
+  z-index: 1000;
+  overflow: hidden; /* !!! Muhim: tashqariga chiqib ketmasligi uchun */
+  background-color:#20242e8a;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
+  border-radius: 10px;
+  backdrop-filter: blur(90px);
   width: 350px;
   max-width: 100%;
 }
 
+#length{
+  outline: none;
+}
 .result-container {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(18, 164, 190, 0.178);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -66,16 +74,24 @@ h2 {
 
 .btn {
   border: none;
-  background-color: #3b3b98;
+  background-color: #00d9ffc7;
   color: #fff;
   font-size: 16px;
   padding: 8px 12px;
   cursor: pointer;
+  border-radius: 3px;
 }
 
 .btn-large {
+  background-color: #00d9ff;
+  color: #000000;
   display: block;
   width: 100%;
+  border-radius: 5px;
+}
+.btn-large:hover{
+  cursor: pointer;
+  box-shadow: 1px -1px 18px 6px #00d9ff;
 }
 
 .setting {
@@ -83,4 +99,156 @@ h2 {
   justify-content: space-between;
   align-items: center;
   margin: 15px 0;
+}
+
+
+
+/* Orbit o'zagi */
+.orbit {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  transform: translate(-50%, -50%);
+  transform-origin: center;
+}
+
+.orbit1 {
+  animation: rotateOrbit1 12s linear infinite;
+}
+.orbit2 {
+  animation: rotateOrbit2 16s linear infinite;
+}
+.orbit3 {
+  animation: rotateOrbit3 20s linear infinite reverse;
+}
+
+/* Doiralar */
+.circle {
+  display: block;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  opacity: 0.5;
+  filter: blur(40px);
+  z-index: 20;
+}
+
+.circle1 {
+  background: #e40022;
+  top: -80px; /* masofa markazdan */
+  left: -80px;
+}
+.circle2 {
+  background: #0050e4;
+  top: -100px;
+  left: 100px;
+}
+.circle3 {
+  background: #7bed9f;
+  top: 100px;
+  left: -100px;
+}
+
+/* Harakat yo‘li (orbital aylanishlar) */
+@keyframes rotateOrbit1 {
+  0% { transform: translate(-50%, -50%) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+@keyframes rotateOrbit2 {
+  0% { transform: translate(-50%, -50%) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+@keyframes rotateOrbit3 {
+  0% { transform: translate(-50%, -50%) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* From Uiverse.io by shivesh315 */
+/* Hide the default checkbox */
+.containerz input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.containerz {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  font-size: 25px;
+  user-select: none;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 1.3em;
+  width: 1.3em;
+  background: black;
+  border-radius: 50px;
+  transition: all 0.7s;
+  --spread: 20px;
+}
+
+/* When the checkbox is checked, add a blue background */
+.containerz input:checked ~ .checkmark {
+  background: rgb(0, 0, 0);
+  box-shadow: -10px -10px var(--spread) 0px #5b51d8,
+    0 -10px var(--spread) 0px #833ab4, 10px -10px var(--spread) 0px #e1306c,
+    10px 0 var(--spread) 0px #fd1d1d, 10px 10px var(--spread) 0px #f77737,
+    0 10px var(--spread) 0px #fcaf45, -10px 10px var(--spread) 0px #ffdc80;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.containerz input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.containerz .checkmark:after {
+  left: 0.45em;
+  top: 0.25em;
+  width: 0.25em;
+  height: 0.5em;
+  border: solid #f0f0f0;
+  border-width: 0 0.15em 0.15em 0;
+  transform: rotate(40deg);
 }
